Changelog
=========

4.0 - Unreleased
----------------

* Pep8 cleanup
  [saily]

* Focus development to Plone 4.x and add test buildouts for all Plone 4
  versions including a travis test for all of them.
  [saily]

* Upgrade to plone.app.testing and remove collective.testcaselayer
  [saily]

* Upgrade to latest V1 bootstrap
  [saily]

* Use version 4.0 since we focus development to Plone 4.x now.
  [saily]

* Plone 4.3 compatiblity.
  [pbauer]


3.1.2 - 2013-1-25
-----------------

* Define initFlowpalyer variable and add optional param "area" to load
  flowplayer on a specific area.
  [mathias.leimgruber]

* Clean up init.js
  [mathias.leimgruber]

* Updated italian translation [keul]
* Updated Flowplayer to 3.2.15
  [tom_gross]

3.1.1 - 2012-09-12
------------------

* Fixed manifest.in [jensens]

3.1 - 2012-09-12
----------------

* Added width and height configuration in file edition video tab
  (first loaded from metadata, leave empty to reload from metadata)
  [jriboux]

* Fixed base profile being installed instead of default.
  http://plone.org/products/collective-flowplayer/issues/16
  [jriboux]

3.0 - 2012-08-22
----------------

* Update Flowplayer to 3.2.14
  [encolpe]

* Include ``simplejson`` only on Plone 3 environment
  [keul]

* Removed buggy support for image files
  [keul]

* Fixed a bug that still looks for ``flowplayer_properties``
  even if the product is uninstalled.
  [keul]

* Fixed tests
  [keul]

* Fixed filename lazy property for ChangeLinkView
  [encolpe]

* Changed portlet permission from "Manage portal" to
  the better "Manage portlets"
  [keul]

3.0rc4 - 2011-06-05
-------------------

* Fixed wrong GS import step dependenciences. Fixes
  http://plone.org/products/collective-flowplayer/issues/12
  [naro]

* added script for rebuild all .po files
  [keul]

* added italian translation
  [keul]

3.0rc3 - 2011-05-23
-------------------

* fixed http://plone.org/products/collective-flowplayer/issues/8