@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<object name="Collection">
+    <property name="view_methods" purge="false">
+        <element value="flowplayer"/>
+    </property>
+</object>
