@@ -2,5 +2,6 @@
     <version>4</version>
     <dependencies>
         <dependency>profile-collective.flowplayer:base</dependency>
+        <dependency>profile-collective.flowplayer:collection</dependency>
     </dependencies>
 </metadata>
