@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <object name="portal_types" meta_type="Plone Types Tool">
- <object name="File" />
- <object name="Link" />
- <object name="Folder" />
- <object name="Collection" />
+    <object name="File" />
+    <object name="Link" />
+    <object name="Folder" />
 </object>
