@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<object name="Collection" i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="view_methods" purge="false">
-  <element value="flowplayer"/>
- </property>
-</object>
